# ChangeLog for net-misc/mosh
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Mar 2012; Michael Weber <xmw@gentoo.org> mosh-9999.ebuild,
  -files/mosh-buildsystem.patch:
  builsystem patch gone upstream. TODO bundled libstddjb

  28 Mar 2012; Michael Weber <xmw@gentoo.org> mosh-9999.ebuild:
  Fix deps, drop keyword on LiveVCS

*mosh-9999 (28 Mar 2012)

  28 Mar 2012; Michael Weber <xmw@gentoo.org> +mosh-9999.ebuild,
  +files/mosh-buildsystem.patch, +metadata.xml:
  Initial import.
