@@ -1,13 +1,15 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-EBUILD mosh-9999.ebuild 1014 RMD160 13a70a908b039e3314294f515d5c4f02a012f38c SHA1 266a3f9bd5528a245d1f5e8803d882de21cd4a7c SHA256 05fa823d81bb6028da5c4976fb88837fbdaed1a3e83521560f12600edc7df621
-MISC ChangeLog 528 RMD160 aec4bdb47de89809f2a56414f900898a1fc21a9f SHA1 daff319081a81942cd16cf256fc8096186c6724f SHA256 c25aea8fcb417e9e13f6fec6fb47b9b370a91ce9cd7320111dfc82c0198d0cc6
-MISC metadata.xml 443 RMD160 c7ab6a921079f393f4b154fd72133eb5984c657a SHA1 e89ccb2a05feb3dd1d55c8a12c441ee0972e2a55 SHA256 5a6ee323476c053914818343190fb7df78f79c5715c21452ffc5bdb0a2082a64
+DIST mosh-1.1.2.tar.gz 133734 RMD160 d1708537225c11d71d43d98aae532d73abc85631 SHA1 2310558fd518d8c4f1faada322551e0e29cc01b3 SHA256 95cd839abd3fcba5428f08925de77a8d2d875b4b4ee1148ce82a825309cea4a2
+EBUILD mosh-1.1.2.ebuild 1451 RMD160 158f3194e7e9a542341ea529683392d849010b2e SHA1 098e4fd16ab970ddbac0e500e012024339b2a7b5 SHA256 2c3bac28d9caa9868000eb0873c8add3aea480fb9dbf6183b55b3d2d85b2b5c8
+EBUILD mosh-9999.ebuild 1369 RMD160 1d91eec628a411b28f4743bfc6672797dc82c748 SHA1 49f94993a53fa173fff20487dd9b1a8b446befb4 SHA256 d61afdcdd2370214ccdbbe690f7efe57b8526bb685e7185a8845e2b1682a5c08
+MISC ChangeLog 715 RMD160 ed9ec8d80168f1f4da70cc1e574ed2e7efa7fb9a SHA1 150ac7e6ab310c66eee44998f70615322bab0aea SHA256 73c482066ae0bfcd115d0cc50cd0a16cc8bb66f462ad78d3031f28ad1f7bc71a
+MISC metadata.xml 761 RMD160 f9474551c2d01a25d8cceabad1595bf450f1d225 SHA1 b287a1d5b79a05f1e230f7c71316abf6808ef816 SHA256 af9c5a3a61b5dd347ddf6101d68a5e934fc1895aad842d4ee0a103bc626ed8c1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9ztC0ACgkQknrdDGLu8JBFAwD/S6SjY/v/Cd8jUKyv/V4Wd4G3
-NAaPbjVz4GfB+tXdh40BAIut5NbRGcPmQ4TzPQBTmxG89f4ETBdc7dKX/F3ZauDG
-=lxVJ
+iF4EAREIAAYFAk91HxgACgkQknrdDGLu8JBgZgD9EWAJ59odGuqlSIYhmXnelq2E
+ztfMeIWedIjckhK5S+YA/ikuzb5GTKYuDZFcJgUZ5DnI0+hUplet1zciqLhggCH3
+=UT4P
 -----END PGP SIGNATURE-----
