@@ -11,5 +11,12 @@
 <flag name="examples">Include example scripts</flag>
 <flag name="utempter">Include libutempter support</flag>
 </use>
+<longdescription>
+Mosh is a remote terminal application that supports:
+  - intermittent network connectivity,
+  - roaming to different IP address without dropping the connection, and
+  - intelligent local echo and line editing to reduce the effects
+    of "network lag" on high-latency connections.
+</longdescription>
 </pkgmetadata>
 
