@@ -2,6 +2,12 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mosh-1.1.2 (30 Mar 2012)
+
+  30 Mar 2012; Michael Weber <xmw@gentoo.org> +mosh-1.1.2.ebuild,
+  mosh-9999.ebuild, metadata.xml:
+  Add tagged version, removed bundled stddjb from skalibs.
+
   29 Mar 2012; Michael Weber <xmw@gentoo.org> mosh-9999.ebuild,
   -files/mosh-buildsystem.patch:
   builsystem patch gone upstream. TODO bundled libstddjb
